---------------------------------------------------------------------------
Version 1.18.1 (rgerhards), 2007-08-??
---------------------------------------------------------------------------
Version 1.18.0 (rgerhards), 2007-08-03
- rsyslog now supports fallback actions when an action did not work. This
  is a great feature e.g. for backup database servers or backup syslog
  servers
- modified rklogd to only change the console log level if -c is specified
- added feature to use multiple actions inside a single selector
- implemented $ActionExecOnlyWhenPreviousIsSuspended config directive
- error messages during startup are now spit out to the configured log
  destinations
---------------------------------------------------------------------------
Version 1.17.6 (rgerhards), 2007-08-01
- continued to work on output module modularization - basic stage of
  this work is now FINISHED
- fixed bug in OMSRcreate() - always returned SR_RET_OK
- fixed a bug that caused ommysql to always complain about missing
  templates
- fixed a mem leak in OMSRdestruct - freeing the object itself was
  forgotten - thanks to varmojfekoj for the patch
- fixed a memory leak in syslogd/init() that happend when the config
  file could not be read - thanks to varmojfekoj for the patch
- fixed insufficient memory allocation in addAction() and its helpers.
  The initial fix and idea was developed by mildew, I fine-tuned
  it a bit. Thanks a lot for the fix, I'd probably had pulled out my
  hair to find the bug...
- added output of config file line number when a parsing error occured
- fixed bug in objomsr.c that caused program to abort in debug mode with
  an invalid assertion (in some cases)
- fixed a typo that caused the default template for MySQL to be wrong.
  thanks to mildew for catching this.
- added configuration file command $DebugPrintModuleList and
  $DebugPrintCfSysLineHandlerList
- fixed an invalid value for the MARK timer - unfortunately, there was