@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------
 Version 1.18.1 (rgerhards), 2007-08-??
+- applied a patch from varmojfekoj which solved a potential segfault
+  of rsyslogd on HUP
 ---------------------------------------------------------------------------
 Version 1.18.0 (rgerhards), 2007-08-03
 - rsyslog now supports fallback actions when an action did not work. This
